--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.13.1"
 coilComposeVersion = "2.7.0"
 composeBom = "2025.11.01"
 coreKtxVersion = "1.17.0"
+datastorePreferencesVersion = "1.2.0"
 gsonVersion = "2.13.2"
 kotlin = "2.2.21"
 lifecycleRuntimeKtxVersion = "2.10.0"
@@ -12,6 +13,8 @@ materialIconsExtendedVersion = "1.7.8"
 firebaseBom = "34.6.0"
 kotlinxCoroutinesPlayServices = "1.10.2"
 googleServices = "4.4.4"
+media3ExoplayerVersion = "1.8.0"
+media3UiVersion = "1.8.0"
 navigationComposeVersion = "2.9.6"
 
 [libraries]
@@ -24,8 +27,11 @@ androidx-compose-ui = { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-core-ktx-v1120 = { module = "androidx.core:core-ktx", version.ref = "coreKtxVersion" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferencesVersion" }
 androidx-lifecycle-runtime-ktx-v270 = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtxVersion" }
 androidx-lifecycle-viewmodel-compose-v270 = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelComposeVersion" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3ExoplayerVersion" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3UiVersion" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 coil-compose-v250 = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gsonVersion" }
